Updated slider styles so slider would show correctly. Re-aligned contact box with new slider dimensions

--- a/Mockup_Themes/COS-dk/css/layout.less
+++ b/Mockup_Themes/COS-dk/css/layout.less
@@ -31,10 +31,10 @@
 @headerHeight: 85px;
 @socialMediaHeight: @headerHeight - 55px;
 @headerLinksHeight: @headerHeight - @socialMediaHeight; 
-@sliderHeight: 400px;
+@sliderHeight: 340px;
 @sliderWidth: 1000px;
 @titleHeight: 24px; // subject to change based on length of dept. name
-@navMenuItemSpacing: 5px; // subject to change
+@navMenuItemSpacing: 2.5px; // subject to change
 @widgetsHeight: 300px;
 @footerHeight: 150px;
 @mainFooterHeight: @widgetsHeight + @footerHeight;
@@ -297,12 +297,10 @@ section {
 	.wrap { width: @sliderWidth; }
 	ul.slides {
 		margin: 0 auto;
-		li {display:none;}
 		li img {
 			width: 100%;
 			max-width: 1180px;
 			height: auto;
-			top: -200px;
 		}
 		li h2 {
 			color: @darkBlue;
@@ -353,7 +351,7 @@ section {
 #contact {
 	position: absolute;
 	right: 20px;
-	top: 35px;
+	top: 15px;
 	width: 305px; // = 4 columns
 	height: auto;
 	background: @blueGray;
